# fleetwatch

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/aggregator/: .clang-format  CMakeLists.txt  Dockerfile
apps/aggregator/src/: binproto.cpp  binproto.h  iou.cpp  iou.h  json.cpp  json.h  main.cpp  map.cpp  map.h  match.cpp  match.h  prcurve.cpp  prcurve.h
apps/aggregator/tests/: test_binproto.cpp  test_iou.cpp  test_json.cpp  test_map.cpp  test_match.cpp  test_prcurve.cpp
apps/metrics/: Dockerfile  pyproject.toml
apps/metrics/src/fleetwatch/: __init__.py  aggregator.py  alerts.py  api.py  attribution.py  bench.py  changepoint.py  dashboard.py  drift.py  ingest.py  metrics_ref.py  pipeline.py  schema.py  sim.py  sim_cli.py  store.py
apps/metrics/src/fleetwatch/templates/: base.html  overview.html  unit.html
apps/metrics/tests/: test_alerts.py  test_api.py  test_attribution.py  test_bench.py  test_changepoint.py  test_cli_and_io.py  test_dashboard.py  test_drift.py  test_e2e.py  test_fuzz.py  test_metrics_ref.py  test_parity.py  test_parity_property.py  test_properties.py  test_sim.py  test_store.py
bench/: baseline.json
docs/: aggregator-protocol.md  bench.md  changepoint.md  condition-attribution.md  conditions.md  drift.md  metrics.md
examples/runs/: example.jsonl
