[tool.poetry]
name = "fleetwatch"
version = "0.1.0"
description = "Detection performance metrics and dashboard for a simulated robot fleet"
authors = ["Sai Asish Y <say.apm35@gmail.com>"]
license = "MIT"
readme = "../../README.md"
packages = [{ include = "fleetwatch", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic = "^2.7"
structlog = "^24.1"
fastapi = "^0.111"
uvicorn = "^0.30"
jinja2 = "^3.1"
psycopg = { version = "^3.1", extras = ["binary"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
hypothesis = "^6.100"
mypy = "^1.10"
ruff = "^0.4"
testcontainers = { version = "^4.5", extras = ["postgres"] }
httpx = "^0.27"

[tool.poetry.scripts]
fleetwatch-sim = "fleetwatch.sim_cli:main"
fleetwatch-ingest = "fleetwatch.ingest:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fleetwatch"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["testcontainers.*", "psycopg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["integration: tests that need docker (testcontainers Postgres)"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["fleetwatch"]
branch = true
